tests/NormalTests/paczka2/big_fuzzy/85323246.err
Error in line 8: BuH21zrCT3 S686 4,4
Error in line 19: S450 S849 95,1
Error in line 10: H6kCKCB S181 11,2
Error in line 24: S450 S686 20,8
Error in line 25: H6kCKCB S686 48,6
Error in line 32: 91CDpK9M S849 13,5
Error in line 46: S450 S450 40,2
Error in line 48: LE8 S181 -5,5
Error in line 35: 91CDpK9M S181 66,7
Error in line 50: 91CDpK9M S450 77,6
Error in line 72: 3sG7EwfvT S849 66,0
Error in line 67: S450 S686 90,6
Error in line 68: H6kCKCB S686 325,4
Error in line 53: fOyXHLvk S686 179,4
Error in line 76: H6kCKCB S849 40,3
Error in line 86: S450 S686 42,3
Error in line 89: S450 S181 11,0
Error in line 103: 91CDpK9M S450 3,2
Error in line 107: LE8 S686 276,3
Error in line 119: 3sG7EwfvT S181 25,7
Error in line 108: fOyXHLvk S849 10,5
Error in line 128: LE8 S84_ 148,5
Error in line 125: fOyXHLvk S450 67,9
Error in line 120: LE8 S849 67,8
Error in line 138: LE8 S450 39,0
Error in line 148: fOyXHLvk S181 31,9
Error in line 156: fOyXHLvk S849 193,4
Error in line 173: S450 S686 60,1
Error in line 184: 3sG7EwfvT S849 63,4
Error in line 181: fOyXHLvk S450 84,0
Error in line 185: 3sG7EwfvT S181 23,0
Error in line 194: 91CDpK9M S686 12,4
Error in line 198: 91CDpK9M S181 203,97
Error in line 196: 91CDpK9M S181 57,7
Error in line 199: 91CDpK9M S450 39,8
Error in line 197: S450 S849 20,7
Error in line 212: 91CDpK9M S181 53,7
Error in line 218: 3sG7EwfvT S686 14,5
Error in line 222: 3sG7EwfvT S450 3,9
Error in line 221: BuH21zrCT3 S181 3,7
Error in line 233: LE8 S849 16,95
Error in line 243: 91CDpK9M S849 127,1
